versions/v4.2.0/doxygen/html/structrtio__sqe.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/structrtio__sqe.html
original_path: doxygen/html/structrtio__sqe.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

rtio\_sqe Struct Reference

[Operating System Services](group__os__services.md) » [RTIO](group__rtio.md)

A submission queue event.
[More...](#details)

`#include <[zephyr/rtio/rtio.h](rtio_2rtio_8h_source.md)>`

| Data Fields | |
| --- | --- |
| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) | [op](#a1d8d3e3426e47a2c7f54d98f51acd953) |
|  | Op code. |
| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) | [prio](#a528eb9b721be7b8a8898ab16a7e2d9a7) |
|  | Op priority. |
| [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) | [flags](#aad2ff8524df0e24b812e77e2393bf5b0) |
|  | Op Flags. |
| [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) | [iodev\_flags](#a8bebe5d55aa8549d749466e444fadf91) |
|  | Op iodev flags. |
| const struct [rtio\_iodev](structrtio__iodev.md) \* | [iodev](#a6c784702f011592c84feacd57915bbfc) |
|  | Device to operation on. |
| void \* | [userdata](#a0ed519ee0b5867ff73bdaf37f983c971) |
|  | User provided data which is returned upon operation completion. |
| union { |  |
| struct { |  |
| [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f)   [buf\_len](#a67376f40a13960b152a23da250275722) |  |
|  | Length of buffer. [More...](#a67376f40a13960b152a23da250275722) |
| const [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*   [buf](#ab71176c084e8b8eb65dfeb3018ae2a49) |  |
|  | Buffer to write from. [More...](#ab71176c084e8b8eb65dfeb3018ae2a49) |
| }   [tx](#a4399cf25c7e761126a6218c2b7e3192d) |
|  | OP\_TX. [More...](#a4399cf25c7e761126a6218c2b7e3192d) |
| struct { |  |
| [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f)   [buf\_len](#a67376f40a13960b152a23da250275722) |  |
|  | Length of buffer. [More...](#a67376f40a13960b152a23da250275722) |
| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*   [buf](#a55e98f27b26393fee8e179b7bdb6a52e) |  |
|  | Buffer to read into. [More...](#a55e98f27b26393fee8e179b7bdb6a52e) |
| }   [rx](#a37a98afc43f26355c70e7036725b2544) |
|  | OP\_RX. [More...](#a37a98afc43f26355c70e7036725b2544) |
| struct { |  |
| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d)   [buf\_len](#a4125148f520b61d0fe3ba156fbb53322) |  |
|  | Length of tiny buffer. [More...](#a4125148f520b61d0fe3ba156fbb53322) |
| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d)   [buf](#a8f0544318fa972be2541ae1e85efc33f) [7] |  |
|  | Tiny buffer. [More...](#a8f0544318fa972be2541ae1e85efc33f) |
| }   [tiny\_tx](#a19ace9c984538c2022e7f8ecaefa075d) |
|  | OP\_TINY\_TX. [More...](#a19ace9c984538c2022e7f8ecaefa075d) |
| struct { |  |
| [rtio\_callback\_t](group__rtio.md#gad1dbd690e6cf88d7c788436dd04d1a00)   [callback](#af8c31c33e9fedebe55cac73595d0f696) |  |
| void \*   [arg0](#a438d2156a61aef9ca840af9c01d5dfa4) |  |
|  | Last argument given to callback. [More...](#a438d2156a61aef9ca840af9c01d5dfa4) |
| }   [callback](#add4f73af249b5b548ddf8f5b8d84af2b) |
|  | OP\_CALLBACK. [More...](#add4f73af249b5b548ddf8f5b8d84af2b) |
| struct { |  |
| [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f)   [buf\_len](#a67376f40a13960b152a23da250275722) |  |
|  | Length of tx and rx buffers. [More...](#a67376f40a13960b152a23da250275722) |
| const [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*   [tx\_buf](#a18bfa63542954f4bb8b924c92c48e931) |  |
|  | Buffer to write from. [More...](#a18bfa63542954f4bb8b924c92c48e931) |
| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*   [rx\_buf](#a4d2090fc11b897724a883ad1087d9f73) |  |
|  | Buffer to read into. [More...](#a4d2090fc11b897724a883ad1087d9f73) |
| }   [txrx](#a5f2511eb361a7a4d54a92fae4d391e8c) |
|  | OP\_TXRX. [More...](#a5f2511eb361a7a4d54a92fae4d391e8c) |
| struct { |  |
| [k\_timeout\_t](structk__timeout__t.md)   [timeout](#a544c75ee10281e10e83f51df5b157d62) |  |
|  | Delay timeout. [More...](#a544c75ee10281e10e83f51df5b157d62) |
| struct \_timeout   [to](#a582d4a8022d237f894034a5a92511587) |  |
|  | Timeout struct. [More...](#a582d4a8022d237f894034a5a92511587) |
| }   [delay](#a9a93700154d745bc1bacc764bbfbe696) |
|  | OP\_DELAY. [More...](#a9a93700154d745bc1bacc764bbfbe696) |
| [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f)   [i2c\_config](#a07bf344b1b1063b8bea80cf5ba1c1cc5) |  |
|  | OP\_I2C\_CONFIGURE. [More...](#a07bf344b1b1063b8bea80cf5ba1c1cc5) |
| struct { |  |
| int   [type](#aa09a0c93a6e8cfc73278a87942e4af33) |  |
| void \*   [config](#ac07a16c50a067acc90bd4ab08aae4184) |  |
| }   [i3c\_config](#a7f568fc04ec3bd70577d85f03d671d0b) |
|  | OP\_I3C\_CONFIGURE. [More...](#a7f568fc04ec3bd70577d85f03d671d0b) |
| void \*   [ccc\_payload](#a8d78973983abca8b97cfc5bcdc2dd2f1) |  |
|  | OP\_I3C\_CCC. [More...](#a8d78973983abca8b97cfc5bcdc2dd2f1) |
| struct { |  |
| [atomic\_t](atomic__types_8h.md#a124f07c3a788e53c3a40e4e1c06d8af8)   [ok](#a45d8aad94aa1dac80c90cf7c0266bcd8) |  |
| [rtio\_signaled\_t](group__rtio.md#gab254ffa4d10bfb670bacd1c47c1f8711)   [callback](#a597587210c0a574d95c7c84ae9002267) |  |
| void \*   [userdata](#a0ed519ee0b5867ff73bdaf37f983c971) |  |
| }   [await](#a7ed5828c28fd59a34f5aa7262e4ddd20) |
|  | OP\_AWAIT. [More...](#a7ed5828c28fd59a34f5aa7262e4ddd20) |
| }; |  |

## Detailed Description

A submission queue event.

## Field Documentation

## [◆ ](#a2c9c387b0ed438ca5e4b7afdf749544e)[union]

| union { ... } [rtio\_sqe](structrtio__sqe.md) |
| --- |

## [◆ ](#a438d2156a61aef9ca840af9c01d5dfa4)arg0

| void\* rtio\_sqe::arg0 |
| --- |

Last argument given to callback.

## [◆ ](#a7ed5828c28fd59a34f5aa7262e4ddd20)[struct]

| struct { ... } rtio\_sqe::await |
| --- |

OP\_AWAIT.

## [◆ ](#a8f0544318fa972be2541ae1e85efc33f)buf [1/3]

| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) rtio\_sqe::buf[7] |
| --- |

Tiny buffer.

## [◆ ](#a55e98f27b26393fee8e179b7bdb6a52e)buf [2/3]

| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d)\* rtio\_sqe::buf |
| --- |

Buffer to read into.

## [◆ ](#ab71176c084e8b8eb65dfeb3018ae2a49)buf [3/3]

| const [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d)\* rtio\_sqe::buf |
| --- |

Buffer to write from.

## [◆ ](#a4125148f520b61d0fe3ba156fbb53322)buf\_len [1/2]

| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) rtio\_sqe::buf\_len |
| --- |

Length of tiny buffer.

## [◆ ](#a67376f40a13960b152a23da250275722)buf\_len [2/2]

| [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) rtio\_sqe::buf\_len |
| --- |

Length of buffer.

Length of tx and rx buffers.

## [◆ ](#a597587210c0a574d95c7c84ae9002267)callback [1/3]

| [rtio\_signaled\_t](group__rtio.md#gab254ffa4d10bfb670bacd1c47c1f8711) rtio\_sqe::callback |
| --- |

## [◆ ](#add4f73af249b5b548ddf8f5b8d84af2b)[struct] [2/3]

| struct { ... } rtio\_sqe::callback |
| --- |

OP\_CALLBACK.

## [◆ ](#af8c31c33e9fedebe55cac73595d0f696)callback [3/3]

| [rtio\_callback\_t](group__rtio.md#gad1dbd690e6cf88d7c788436dd04d1a00) rtio\_sqe::callback |
| --- |

## [◆ ](#a8d78973983abca8b97cfc5bcdc2dd2f1)ccc\_payload

| void\* rtio\_sqe::ccc\_payload |
| --- |

OP\_I3C\_CCC.

## [◆ ](#ac07a16c50a067acc90bd4ab08aae4184)config

| void\* rtio\_sqe::config |
| --- |

## [◆ ](#a9a93700154d745bc1bacc764bbfbe696)[struct]

| struct { ... } rtio\_sqe::delay |
| --- |

OP\_DELAY.

## [◆ ](#aad2ff8524df0e24b812e77e2393bf5b0)flags

| [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) rtio\_sqe::flags |
| --- |

Op Flags.

## [◆ ](#a07bf344b1b1063b8bea80cf5ba1c1cc5)i2c\_config

| [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) rtio\_sqe::i2c\_config |
| --- |

OP\_I2C\_CONFIGURE.

## [◆ ](#a7f568fc04ec3bd70577d85f03d671d0b)[struct]

| struct { ... } rtio\_sqe::i3c\_config |
| --- |

OP\_I3C\_CONFIGURE.

## [◆ ](#a6c784702f011592c84feacd57915bbfc)iodev

| const struct [rtio\_iodev](structrtio__iodev.md)\* rtio\_sqe::iodev |
| --- |

Device to operation on.

## [◆ ](#a8bebe5d55aa8549d749466e444fadf91)iodev\_flags

| [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) rtio\_sqe::iodev\_flags |
| --- |

Op iodev flags.

## [◆ ](#a45d8aad94aa1dac80c90cf7c0266bcd8)ok

| [atomic\_t](atomic__types_8h.md#a124f07c3a788e53c3a40e4e1c06d8af8) rtio\_sqe::ok |
| --- |

## [◆ ](#a1d8d3e3426e47a2c7f54d98f51acd953)op

| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) rtio\_sqe::op |
| --- |

Op code.

## [◆ ](#a528eb9b721be7b8a8898ab16a7e2d9a7)prio

| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) rtio\_sqe::prio |
| --- |

Op priority.

## [◆ ](#a37a98afc43f26355c70e7036725b2544)[struct]

| struct { ... } rtio\_sqe::rx |
| --- |

OP\_RX.

## [◆ ](#a4d2090fc11b897724a883ad1087d9f73)rx\_buf

| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d)\* rtio\_sqe::rx\_buf |
| --- |

Buffer to read into.

## [◆ ](#a544c75ee10281e10e83f51df5b157d62)timeout

| [k\_timeout\_t](structk__timeout__t.md) rtio\_sqe::timeout |
| --- |

Delay timeout.

## [◆ ](#a19ace9c984538c2022e7f8ecaefa075d)[struct]

| struct { ... } rtio\_sqe::tiny\_tx |
| --- |

OP\_TINY\_TX.

## [◆ ](#a582d4a8022d237f894034a5a92511587)to

| struct \_timeout rtio\_sqe::to |
| --- |

Timeout struct.

Used internally.

## [◆ ](#a4399cf25c7e761126a6218c2b7e3192d)[struct]

| struct { ... } rtio\_sqe::tx |
| --- |

OP\_TX.

## [◆ ](#a18bfa63542954f4bb8b924c92c48e931)tx\_buf

| const [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d)\* rtio\_sqe::tx\_buf |
| --- |

Buffer to write from.

## [◆ ](#a5f2511eb361a7a4d54a92fae4d391e8c)[struct]

| struct { ... } rtio\_sqe::txrx |
| --- |

OP\_TXRX.

## [◆ ](#aa09a0c93a6e8cfc73278a87942e4af33)type

| int rtio\_sqe::type |
| --- |

## [◆ ](#a0ed519ee0b5867ff73bdaf37f983c971)userdata

| void\* rtio\_sqe::userdata |
| --- |

User provided data which is returned upon operation completion.

Could be a pointer or integer.

If unique identification of completions is desired this should be unique as well.

---

The documentation for this struct was generated from the following file:

- zephyr/rtio/[rtio.h](rtio_2rtio_8h_source.md)

- [rtio\_sqe](structrtio__sqe.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.2.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
